buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://files.minecraftforge.net/maven' }
        jcenter()
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle.forge'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'java'

group = mod_group_id
version = mod_version
archivesBaseName = mod_id

sourceCompatibility = targetCompatibility = '1.8'

repositories {
    maven { url = 'https://maven.minecraftforge.net' }
    maven { url = 'https://files.minecraftforge.net/maven' }
    jcenter()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    mavenCentral()
}

dependencies {
    compile 'org.spongepowered:mixin:0.8.2'
    testCompile 'junit:junit:4.13.2'
}

minecraft {
    version = "${minecraft_version}-${forge_version}"
    runDir = 'run'
    mappings = mcp_mappings
    clientJvmArgs += [
            '-Dfml.coreMods.load=dev.httxrafa.modflared.mixin.ModflaredMixinLoader',
            '-Dmixin.env.disableRefMap=true'
    ]
}

mixin {
    defaultObfuscationEnv searge
}

processResources {
    inputs.property 'version', project.version
    inputs.property 'mcversion', minecraft_version
    filesMatching('mcmod.info') {
        expand([
                version: project.version,
                mcversion: minecraft_version,
                mod_id: mod_id,
                mod_name: mod_name,
                mod_description: mod_description,
                mod_authors: mod_authors,
                mod_license: mod_license
        ])
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation']
}

jar {
    manifest {
        attributes(
                'FMLCorePluginContainsFMLMod': 'true',
                'FMLCorePlugin': 'dev.httxrafa.modflared.mixin.ModflaredMixinLoader',
                'MixinConfigs': 'modflared.mixins.json'
        )
    }
    rename 'mixin.refmap.json', 'modflared.refmap.json'
}

tasks.extractAnnotationsJar.enabled = false

task shadowJar(type: Jar) {
    classifier = 'all'
    from zipTree(jar.archivePath)
    from {
        configurations.compile.filter { dep ->
            dep.name.contains('mixin')
        }.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    manifest {
        attributes(
                'FMLCorePluginContainsFMLMod': 'true',
                'FMLCorePlugin': 'dev.httxrafa.modflared.mixin.ModflaredMixinLoader',
                'MixinConfigs': 'modflared.mixins.json'
        )
    }
    rename 'mixin.refmap.json', 'modflared.refmap.json'
}

shadowJar.dependsOn reobfJar
build.dependsOn shadowJar
